--- a/src/app/component/layout/footer/footer.component.html
+++ b/src/app/component/layout/footer/footer.component.html
@@ -1,7 +1,8 @@
 <footer class="footer" style="--bg1: url(assets/images/footer-3.png); --bg2: url(assets/images/Group626387.png);">
   <div class="container">
-    <div class="txt">Copyright © 2024 Designed system by hungtd2180. All rights have yet reserved.
-      Distributed By: <a class="txt" href="https://github.com/hungtd2180">ONEHomeCare</a></div>
+    <div class="txt">
+      Bản quyền © 2024 Hệ thống được thiết kế bởi hungtd2180. Tất cả các quyền vẫn chưa được đăng kí.
+      Liên hệ : <a class="txt" href="https://github.com/hungtd2180">ONEHomeCare</a></div>
     <div class="txt">Số 3 Đường Cầu Giấy, Ngọc Khánh, Đống Đa, Hà Nội</div>
   </div>
 </footer>
