--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -626,7 +626,7 @@ a:focus {
     width: 100%;
     padding-left: 280px;
     z-index: 2;
-    background: #15283c;
+    background: #fff;
     top: 0;
     transition: ease all 0.3s;
     left: 0;
@@ -3276,7 +3276,6 @@ table.projects tr td:first-child {
 }
 
 .logo_login {
-    background: url('images/layout_img/login_image.jpg');
     padding: 50px 0;
     background-position: center center;
     position: relative;
@@ -3288,7 +3287,6 @@ table.projects tr td:first-child {
     width: 100%;
     height: 100%;
     position: absolute;
-    background: rgba(21, 40, 60, .8);
     top: 0px;
     left: 0;
 }
@@ -3325,7 +3323,6 @@ table.projects tr td:first-child {
 }
 
 .login_form form .field {
-    display: block;
     margin: 0 0 20px;
 }
 
